# lib/httpServer/swagger.json
@@ -546,7 +546,10 @@
                                     "description": "The password to create the wallet for the student"
                                 }
                             },
-                            "required": ["User_ID", "password"]
+                            "required": [
+                                "User_ID",
+                                "password"
+                            ]
                         }
                     }
                 ],
@@ -556,9 +559,15 @@
                         "schema": {
                             "type": "object",
                             "properties": {
-                                "User_ID": { "type": "string" },
-                                "walletID": { "type": "string" },
-                                "publicKey": { "type": "string" }
+                                "User_ID": {
+                                    "type": "string"
+                                },
+                                "walletID": {
+                                    "type": "string"
+                                },
+                                "publicKey": {
+                                    "type": "string"
+                                }
                             }
                         }
                     },
@@ -567,8 +576,7 @@
                     }
                 }
             }
-        }, 
-        
+        },
         "/operator/attendance": {
             "post": {
                 "tags": [
@@ -601,7 +609,11 @@
                                     "example": "your_private_key_here"
                                 }
                             },
-                            "required": ["studentId", "eventId", "privateKey"]
+                            "required": [
+                                "studentId",
+                                "eventId",
+                                "privateKey"
+                            ]
                         }
                     }
                 ],
@@ -672,8 +684,7 @@
                     }
                 }
             }
-        },        
-
+        },
         "/node/peers": {
             "get": {
                 "tags": [
